feat: v0.7.0 - 당첨발표 스케줄 기반 업데이트
- 옵션: 최소/최대 요청 간격 제거, 로또/연금복권 발표 확인 시간 추가 (0~23시, 기본 자정)
- 스케줄: 토요일(로또) / 목요일(연금복권) 설정 시간에만 자동 업데이트
- Keepalive: 랜덤 25~40분 → 고정 30분 (사이트 세션 유효 시간)
- API throttle: 내부 기본값 사용 (옵션에서 제거)

--- a/custom_components/donghang_lottery/translations/en.json
+++ b/custom_components/donghang_lottery/translations/en.json
@@ -16,13 +16,19 @@
     "step": {
       "init": {
         "title": "Donghang Lottery options",
-        "description": "Anti-blocking: Increase request intervals to avoid server blocks.",
+        "description": "Configure draw result check times and connection settings.",
         "data": {
           "location_entity": "Location entity",
           "username": "Username",
           "password": "Password",
-          "min_request_interval": "Min request interval (seconds)",
-          "max_request_interval": "Max request interval (seconds)"
+          "lotto_update_hour": "Lotto 6/45 result check hour (0~23)",
+          "pension_update_hour": "Pension 720+ result check hour (0~23)",
+          "use_proxy": "Use proxy (IP block bypass)"
+        },
+        "data_description": {
+          "lotto_update_hour": "Hour to check Saturday draw results (0=midnight, default: 0)",
+          "pension_update_hour": "Hour to check Thursday draw results (0=midnight, default: 0)",
+          "use_proxy": "Automatically collect free proxies to bypass IP blocks. Enable if your IP is already blocked."
         }
       }
     }
