--- a/custom_components/donghang_lottery/translations/ko.json
+++ b/custom_components/donghang_lottery/translations/ko.json
@@ -16,16 +16,18 @@
     "step": {
       "init": {
         "title": "동행복권 옵션",
-        "description": "차단 우회 설정을 조정할 수 있습니다. 이미 IP가 차단된 경우 프록시 사용을 활성화하세요.",
+        "description": "당첨발표 확인 시간과 연결 설정을 조정할 수 있습니다.",
         "data": {
           "location_entity": "위치 엔티티",
           "username": "아이디",
           "password": "비밀번호",
-          "min_request_interval": "최소 요청 간격 (초)",
-          "max_request_interval": "최대 요청 간격 (초)",
+          "lotto_update_hour": "로또 6/45 발표 확인 시간 (시, 0~23)",
+          "pension_update_hour": "연금복권 720+ 발표 확인 시간 (시, 0~23)",
           "use_proxy": "프록시 사용 (IP 차단 우회)"
         },
         "data_description": {
+          "lotto_update_hour": "토요일 추첨 후 당첨 결과를 확인할 시간 (0=자정, 기본값: 0)",
+          "pension_update_hour": "목요일 추첨 후 당첨 결과를 확인할 시간 (0=자정, 기본값: 0)",
           "use_proxy": "활성화 시 무료 프록시를 자동 수집하여 IP 차단을 우회합니다. 이미 차단된 IP라면 이 옵션을 켜세요."
         }
       }
