fix: v0.7.2 - 엔티티 unavailable 수정 + 설정화면 통일
- _set_default_data()에서 async_set_updated_data() 사용하여 last_update_success=True 설정
- 서버 차단 시에도 엔티티가 unavailable 대신 기본값(0)으로 표시
- 최초 설정화면과 재설정화면을 동일한 항목으로 통일
- 최초 설정에도 업데이트 시간, 프록시 옵션 포함

--- a/custom_components/donghang_lottery/translations/en.json
+++ b/custom_components/donghang_lottery/translations/en.json
@@ -3,11 +3,19 @@
     "step": {
       "user": {
         "title": "Donghang Lottery",
-        "description": "Enter your Donghang Lottery credentials. [Donghang Lottery](https://www.dhlottery.co.kr/)\nLocation entity (optional): nearby search reference",
+        "description": "Enter your Donghang Lottery credentials and update settings. [Donghang Lottery](https://www.dhlottery.co.kr/)",
         "data": {
           "username": "Username",
           "password": "Password",
-          "location_entity": "Location entity"
+          "location_entity": "Location entity",
+          "lotto_update_hour": "Lotto 6/45 result check hour (0~23)",
+          "pension_update_hour": "Pension 720+ result check hour (0~23)",
+          "use_proxy": "Use proxy (IP block bypass)"
+        },
+        "data_description": {
+          "lotto_update_hour": "Hour to check Saturday draw results (0=midnight, default: 0)",
+          "pension_update_hour": "Hour to check Thursday draw results (0=midnight, default: 0)",
+          "use_proxy": "Automatically collect free proxies to bypass IP blocks. Enable if your IP is already blocked."
         }
       }
     }
