feat: v0.8.1 - Cloudflare Worker 릴레이 우회 지원
IP 차단된 HA 서버에서도 동행복권 접속 가능하도록
Cloudflare Worker 릴레이 프록시 지원 추가.

- api.py: relay_url 기반 URL 리졸브 (_resolve_url)
- __init__.py: 릴레이 모드 시 unsafe CookieJar 사용
- config_flow.py: 설정/옵션에 relay_url 필드 추가
- const.py: CONF_RELAY_URL, DEFAULT_RELAY_URL 상수 추가
- strings/translations: relay_url UI 텍스트 추가
- worker/: Cloudflare Worker 릴레이 서버 코드 제공

--- a/custom_components/donghang_lottery/translations/en.json
+++ b/custom_components/donghang_lottery/translations/en.json
@@ -10,12 +10,14 @@
           "location_entity": "Location entity",
           "lotto_update_hour": "Lotto 6/45 result check hour (0~23)",
           "pension_update_hour": "Pension 720+ result check hour (0~23)",
-          "use_proxy": "Use proxy (IP block bypass)"
+          "use_proxy": "Use proxy (IP block bypass)",
+          "relay_url": "Relay Server URL"
         },
         "data_description": {
           "lotto_update_hour": "Hour to check Saturday draw results (0=midnight, default: 0)",
           "pension_update_hour": "Hour to check Thursday draw results (0=midnight, default: 0)",
-          "use_proxy": "Automatically collect free proxies to bypass IP blocks. Enable if your IP is already blocked."
+          "use_proxy": "Automatically collect free proxies to bypass IP blocks. Enable if your IP is already blocked.",
+          "relay_url": "Enter Cloudflare Worker relay URL. If your HA server cannot directly access dhlottery.co.kr, requests will be routed through the relay. Leave empty for direct connection."
         }
       }
     }
@@ -31,12 +33,14 @@
           "password": "Password",
           "lotto_update_hour": "Lotto 6/45 result check hour (0~23)",
           "pension_update_hour": "Pension 720+ result check hour (0~23)",
-          "use_proxy": "Use proxy (IP block bypass)"
+          "use_proxy": "Use proxy (IP block bypass)",
+          "relay_url": "Relay Server URL"
         },
         "data_description": {
           "lotto_update_hour": "Hour to check Saturday draw results (0=midnight, default: 0)",
           "pension_update_hour": "Hour to check Thursday draw results (0=midnight, default: 0)",
-          "use_proxy": "Automatically collect free proxies to bypass IP blocks. Enable if your IP is already blocked."
+          "use_proxy": "Automatically collect free proxies to bypass IP blocks. Enable if your IP is already blocked.",
+          "relay_url": "Enter Cloudflare Worker relay URL. If your HA server cannot directly access dhlottery.co.kr, requests will be routed through the relay. Leave empty for direct connection."
         }
       }
     }
