feat: v1.0.1 - 내 주변 판매점 기기 추가 및 센서 개선
- 내 주변 판매점 기기 추가 (위치 엔티티 기반)
  - 로또6/45, 연금복권720+ 각각의 가장 가까운 당첨 판매점 표시
  - 판매점명, 주소, 전화번호, 거리, 당첨종류/방식, 복권종류 판매 여부
  - 온라인 판매점 자동 제외 (좌표 0,0인 경우)
- 추첨 시간 기반 자동 업데이트 (로또 토 21:10, 연금 목 19:30)
- 결과 미반영 시 10분 간격 자동 재시도
- 사용자 설정 업데이트 시간 제거
- 센서 이름 변경: 미수령 당첨금/미확인 게임 (있음/없음 값)
- 당첨자 수 센서 천단위 쉼표 포맷 적용
- 연금복권 번호 각 자리 쉼표 구분 포맷
- 연금복권 보너스 조/번호 센서 추가
- README 재작성

--- a/custom_components/donghang_lottery/translations/en.json
+++ b/custom_components/donghang_lottery/translations/en.json
@@ -8,13 +8,9 @@
           "username": "Username",
           "password": "Password",
           "location_entity": "Location entity",
-          "lotto_update_hour": "Lotto 6/45 result check hour (0~23)",
-          "pension_update_hour": "Pension 720+ result check hour (0~23)",
           "use_relay": "IP Block Bypass (Relay Server)"
         },
         "data_description": {
-          "lotto_update_hour": "Hour to check Saturday draw results (0=midnight, default: 0)",
-          "pension_update_hour": "Hour to check Thursday draw results (0=midnight, default: 0)",
           "use_relay": "If your IP is blocked by dhlottery.co.kr, route requests through a Cloudflare Worker relay."
         }
       },
@@ -34,18 +30,14 @@
     "step": {
       "init": {
         "title": "Donghang Lottery Options",
-        "description": "Configure draw result check times and connection settings.",
+        "description": "Configure connection settings.",
         "data": {
           "username": "Username",
           "password": "Password",
           "location_entity": "Location entity",
-          "lotto_update_hour": "Lotto 6/45 result check hour (0~23)",
-          "pension_update_hour": "Pension 720+ result check hour (0~23)",
           "use_relay": "IP Block Bypass (Relay Server)"
         },
         "data_description": {
-          "lotto_update_hour": "Hour to check Saturday draw results (0=midnight, default: 0)",
-          "pension_update_hour": "Hour to check Thursday draw results (0=midnight, default: 0)",
           "use_relay": "If your IP is blocked by dhlottery.co.kr, route requests through a Cloudflare Worker relay."
         }
       },
@@ -125,6 +117,84 @@
       },
       "pension720_number": {
         "name": "Pension 720+ Number"
+      },
+      "has_unclaimed_prizes": {
+        "name": "Unclaimed Prizes"
+      },
+      "has_unconfirmed_games": {
+        "name": "Unconfirmed Games"
+      },
+      "pension720_bonus_group": {
+        "name": "Pension 720+ Bonus Group"
+      },
+      "pension720_bonus_number": {
+        "name": "Pension 720+ Bonus Number"
+      },
+      "lotto_shop_name": {
+        "name": "Lotto 6/45 Winning Shop"
+      },
+      "lotto_shop_address": {
+        "name": "Lotto 6/45 Winning Shop Address"
+      },
+      "lotto_shop_phone": {
+        "name": "Lotto 6/45 Winning Shop Phone"
+      },
+      "lotto_shop_distance": {
+        "name": "Lotto 6/45 Winning Shop Distance"
+      },
+      "lotto_shop_win_rank": {
+        "name": "Lotto 6/45 Win Rank"
+      },
+      "lotto_shop_win_type": {
+        "name": "Lotto 6/45 Win Type"
+      },
+      "lotto_shop_sells_lotto645": {
+        "name": "Lotto 6/45 Shop Sells Lotto 6/45"
+      },
+      "lotto_shop_sells_pension720": {
+        "name": "Lotto 6/45 Shop Sells Pension 720+"
+      },
+      "lotto_shop_sells_speetto500": {
+        "name": "Lotto 6/45 Shop Sells Speetto 500"
+      },
+      "lotto_shop_sells_speetto1000": {
+        "name": "Lotto 6/45 Shop Sells Speetto 1000"
+      },
+      "lotto_shop_sells_speetto2000": {
+        "name": "Lotto 6/45 Shop Sells Speetto 2000"
+      },
+      "pension_shop_name": {
+        "name": "Pension 720+ Winning Shop"
+      },
+      "pension_shop_address": {
+        "name": "Pension 720+ Winning Shop Address"
+      },
+      "pension_shop_phone": {
+        "name": "Pension 720+ Winning Shop Phone"
+      },
+      "pension_shop_distance": {
+        "name": "Pension 720+ Winning Shop Distance"
+      },
+      "pension_shop_win_rank": {
+        "name": "Pension 720+ Win Rank"
+      },
+      "pension_shop_win_type": {
+        "name": "Pension 720+ Win Type"
+      },
+      "pension_shop_sells_lotto645": {
+        "name": "Pension 720+ Shop Sells Lotto 6/45"
+      },
+      "pension_shop_sells_pension720": {
+        "name": "Pension 720+ Shop Sells Pension 720+"
+      },
+      "pension_shop_sells_speetto500": {
+        "name": "Pension 720+ Shop Sells Speetto 500"
+      },
+      "pension_shop_sells_speetto1000": {
+        "name": "Pension 720+ Shop Sells Speetto 1000"
+      },
+      "pension_shop_sells_speetto2000": {
+        "name": "Pension 720+ Shop Sells Speetto 2000"
       }
     },
     "button": {
@@ -133,12 +203,6 @@
       }
     },
     "binary_sensor": {
-      "has_unclaimed_prizes": {
-        "name": "Has Unclaimed Prizes"
-      },
-      "has_unconfirmed_games": {
-        "name": "Has Unconfirmed Games"
-      },
       "has_balance": {
         "name": "Has Balance"
       },
