feat: v1.0.4 - 당첨 판매점 기기 분리 및 센서 개선
- "내 주변 판매점"을 "내 주변 로또 당첨 판매점"/"내 주변 연금복권 당첨 판매점"으로 분리
- 센서 순서 변경: 이름, 주소, 거리, 전화번호, 당첨방식, 당첨종류, 복권종류
- 센서 이름 단순화 (이름/주소/거리/전화번호/당첨방식/당첨종류)
- 거리 센서에 SensorDeviceClass.DISTANCE 적용
- 로또 온라인 판매점 제외 조건 추가 (ltShpId=="51100000")

--- a/custom_components/donghang_lottery/translations/en.json
+++ b/custom_components/donghang_lottery/translations/en.json
@@ -131,70 +131,70 @@
         "name": "Pension 720+ Bonus Number"
       },
       "lotto_shop_name": {
-        "name": "Lotto 6/45 Winning Shop"
+        "name": "Name"
       },
       "lotto_shop_address": {
-        "name": "Lotto 6/45 Winning Shop Address"
-      },
-      "lotto_shop_phone": {
-        "name": "Lotto 6/45 Winning Shop Phone"
+        "name": "Address"
       },
       "lotto_shop_distance": {
-        "name": "Lotto 6/45 Winning Shop Distance"
+        "name": "Distance"
       },
-      "lotto_shop_win_rank": {
-        "name": "Lotto 6/45 Win Rank"
+      "lotto_shop_phone": {
+        "name": "Phone"
       },
       "lotto_shop_win_type": {
-        "name": "Lotto 6/45 Win Type"
+        "name": "Win Type"
+      },
+      "lotto_shop_win_rank": {
+        "name": "Win Rank"
       },
       "lotto_shop_sells_lotto645": {
-        "name": "Lotto 6/45 Shop Sells Lotto 6/45"
+        "name": "Lotto 6/45"
       },
       "lotto_shop_sells_pension720": {
-        "name": "Lotto 6/45 Shop Sells Pension 720+"
+        "name": "Pension 720+"
       },
       "lotto_shop_sells_speetto500": {
-        "name": "Lotto 6/45 Shop Sells Speetto 500"
+        "name": "Speetto 500"
       },
       "lotto_shop_sells_speetto1000": {
-        "name": "Lotto 6/45 Shop Sells Speetto 1000"
+        "name": "Speetto 1000"
       },
       "lotto_shop_sells_speetto2000": {
-        "name": "Lotto 6/45 Shop Sells Speetto 2000"
+        "name": "Speetto 2000"
       },
       "pension_shop_name": {
-        "name": "Pension 720+ Winning Shop"
+        "name": "Name"
       },
       "pension_shop_address": {
-        "name": "Pension 720+ Winning Shop Address"
-      },
-      "pension_shop_phone": {
-        "name": "Pension 720+ Winning Shop Phone"
+        "name": "Address"
       },
       "pension_shop_distance": {
-        "name": "Pension 720+ Winning Shop Distance"
+        "name": "Distance"
       },
-      "pension_shop_win_rank": {
-        "name": "Pension 720+ Win Rank"
+      "pension_shop_phone": {
+        "name": "Phone"
       },
       "pension_shop_win_type": {
-        "name": "Pension 720+ Win Type"
+        "name": "Win Type"
+      },
+      "pension_shop_win_rank": {
+        "name": "Win Rank"
       },
       "pension_shop_sells_lotto645": {
-        "name": "Pension 720+ Shop Sells Lotto 6/45"
+        "name": "Lotto 6/45"
       },
       "pension_shop_sells_pension720": {
-        "name": "Pension 720+ Shop Sells Pension 720+"
+        "name": "Pension 720+"
       },
       "pension_shop_sells_speetto500": {
-        "name": "Pension 720+ Shop Sells Speetto 500"
+        "name": "Speetto 500"
       },
       "pension_shop_sells_speetto1000": {
-        "name": "Pension 720+ Shop Sells Speetto 1000"
+        "name": "Speetto 1000"
       },
       "pension_shop_sells_speetto2000": {
-        "name": "Pension 720+ Shop Sells Speetto 2000"
+        "name": "Speetto 2000"
       }
     },
     "button": {
