feat: v1.0.5 - 번호 센서 분리, 판매점 버그 수정, 코드 정리
- 로또6/45 당첨번호를 6개 개별 센서로 분리 (번호 1~6)
- 연금복권720+ 1등/보너스 번호를 각 6개 개별 센서로 분리
- 판매점 연금복권 판매 키 수정 (cpexUsePsbltyYn → pt720NtslYn/pt720LtNtslYn)
- 연금복권 판매점에서 당첨방식 센서 제거 (해당 데이터 없음)
- 판매점 부가 센서 EntityCategory.DIAGNOSTIC 적용
- 미사용 헬퍼 함수 3개 제거, 테스트 파일 삭제
- 로그 이모지 → 텍스트 마커, 코디네이터 버전 히스토리 주석 정리

--- a/custom_components/donghang_lottery/translations/en.json
+++ b/custom_components/donghang_lottery/translations/en.json
@@ -73,8 +73,23 @@
       "lotto645_round": {
         "name": "Lotto 6/45 Round"
       },
-      "lotto645_numbers": {
-        "name": "Lotto 6/45 Numbers"
+      "lotto645_number1": {
+        "name": "Lotto 6/45 Number 1"
+      },
+      "lotto645_number2": {
+        "name": "Lotto 6/45 Number 2"
+      },
+      "lotto645_number3": {
+        "name": "Lotto 6/45 Number 3"
+      },
+      "lotto645_number4": {
+        "name": "Lotto 6/45 Number 4"
+      },
+      "lotto645_number5": {
+        "name": "Lotto 6/45 Number 5"
+      },
+      "lotto645_number6": {
+        "name": "Lotto 6/45 Number 6"
       },
       "lotto645_bonus": {
         "name": "Lotto 6/45 Bonus"
@@ -115,8 +130,23 @@
       "pension720_group": {
         "name": "Pension 720+ Group"
       },
-      "pension720_number": {
-        "name": "Pension 720+ Number"
+      "pension720_number1": {
+        "name": "Pension 720+ 1st Number 1"
+      },
+      "pension720_number2": {
+        "name": "Pension 720+ 1st Number 2"
+      },
+      "pension720_number3": {
+        "name": "Pension 720+ 1st Number 3"
+      },
+      "pension720_number4": {
+        "name": "Pension 720+ 1st Number 4"
+      },
+      "pension720_number5": {
+        "name": "Pension 720+ 1st Number 5"
+      },
+      "pension720_number6": {
+        "name": "Pension 720+ 1st Number 6"
       },
       "has_unclaimed_prizes": {
         "name": "Unclaimed Prizes"
@@ -127,8 +157,23 @@
       "pension720_bonus_group": {
         "name": "Pension 720+ Bonus Group"
       },
-      "pension720_bonus_number": {
-        "name": "Pension 720+ Bonus Number"
+      "pension720_bonus_number1": {
+        "name": "Pension 720+ Bonus Number 1"
+      },
+      "pension720_bonus_number2": {
+        "name": "Pension 720+ Bonus Number 2"
+      },
+      "pension720_bonus_number3": {
+        "name": "Pension 720+ Bonus Number 3"
+      },
+      "pension720_bonus_number4": {
+        "name": "Pension 720+ Bonus Number 4"
+      },
+      "pension720_bonus_number5": {
+        "name": "Pension 720+ Bonus Number 5"
+      },
+      "pension720_bonus_number6": {
+        "name": "Pension 720+ Bonus Number 6"
       },
       "lotto_shop_name": {
         "name": "Name"
@@ -174,9 +219,6 @@
       },
       "pension_shop_phone": {
         "name": "Phone"
-      },
-      "pension_shop_win_type": {
-        "name": "Win Type"
       },
       "pension_shop_win_rank": {
         "name": "Win Rank"
